# Team1

./: .gitignore  .gitignore.swp  README.md
Software/control/: README.md  pyproject.toml
Software/control/ip2_quadruped_robot_velocity/: README.md  pyproject.toml
Software/control/ip2_quadruped_robot_velocity/src/ip2_quadruped_robot_velocity/: __init__.py  env_cfgs.py  rl_cfg.py
Software/control/ip2_quadruped_robot_velocity/src/ip2_quadruped_robot_velocity/quad_bot/: quad_bot_constants.py
Software/control/ip2_quadruped_robot_velocity/src/ip2_quadruped_robot_velocity/quad_bot/xmls/: quad_bot.xml  scene.xml
Software/control/src/loquro_lab/: __init__.py  env_cfgs.py  pyproject.toml
Software/control/src/loquro_lab/loquro_lab/: squats_test.py
Software/control/src/loquro_lab/loquro_lab/xmls/: loquro.xml  loquro_left_leg.xml  loquro_right_leg.xml  new_left.xml  new_right.xml  robot.xml
Software/control/src/loquro_lab/loquro_lab/xmls/assets/: hombro_pierna_correct.stl  pieza1_pierna_left_correct_mk2.stl  pieza2_pierna_left_correct.stl  pieza4_pierna_left_correct.stl  tensor_aluminio_11_60_correct.stl  union_servo_correct.stl
Software/control/src/quadruped_mjlab_project/: rl_cfg.py
Software/control/src/quadruped_mjlab_project/quad_bot/: quad_bot_constants.py
Software/control/src/quadruped_mjlab_project/quad_bot/xmls/: loquro.xml  loquro_left_leg.xml  loquro_right_leg.xml  pata_simple.xml  quad_bot.xml  robot.xml
Software/control/src/quadruped_mjlab_project/quad_bot/xmls/assets/: base_dog.stl  base_dog_correct.stl  cad_servo20kg_p4_correct.stl  foot_left.stl  (+10 more)
(+27 files in other folders)
